--- a/Tangram/test.css
+++ b/Tangram/test.css
@@ -1,5 +1,10 @@
 canvas {
-	background-color: red;
+	border: 1px solid red;
+	background-color: #333333;
+	background-image: linear-gradient( 45deg, red, blue );
+}
+body{
+	overflow: hidden;
 }
 .yellow-triangle{
 	margin-left: 0px;
@@ -12,7 +17,6 @@ canvas {
 	border-top: 100px solid transparent;
 	border-right: 100px solid transparent;
 	border-bottom: 100px solid transparent;
-
 }
 
 .red-triangle{
