--- a/caca/index.css
+++ b/caca/index.css
@@ -12,7 +12,6 @@ img {
 	opacity: .5;
 	margin: -2px;
 	padding: 0px;
-
 }
 
 img:hover {
@@ -44,3 +43,14 @@ img:hover {
 	position: absolute;
 }
 
+
+@media screen and (max-width: 992px) {
+	.adpt { 
+		width:  33.3333%;
+		height: 315px;
+		opacity: .5;
+		margin: -2px;
+		padding: 0px;
+	}
+
+}
