--- a/HappyBird/styles.css
+++ b/HappyBird/styles.css
@@ -13,31 +13,31 @@ canvas {
   box-shadow: inset 0px 0px 40px 40px darkgreen; /* change to alter the effect*/
 }
 
+@media only screen and (max-width: 600px) {
+  canvas {
+    margin-left: 0%;
+  }
+
+  .bird{
+    display: None;
+  }
+}
+
 header {
-  justify-content: center;
   display: flex;
-  color:  white;
+  justify-content: center;
+  align-items: center;
   height: 12vh;
 }
 
-header img{
-  margin-top: 1vh;
-  margin-left: 2vw;
-  margin-right: 2vw;
-  height: 10vh;
-  width:  auto;
+.bird {
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
 
-header h1{  
-  margin: 0px;
-  margin-top: 1vh;
-  background: url(assets/title_texture.jpg);
-  -webkit-background-clip: text;
-  background-size: contain;
-  color: transparent;
-  font-size: 80px;
-  font-family: 'frozen', serif;
-  -webkit-text-stroke: 1px #f0f9;
+.title{
+  max-width: 90%;
+  margin: 1vw;
 }
 
  #restart-button {
